--- a/config/locales/es.encuesta.yml
+++ b/config/locales/es.encuesta.yml
@@ -3,23 +3,75 @@ es:
   encuesta:
     titulo: "Datos sobre el consumo energético de su vivienda"
     subtitulo: "Le rogamos nos conteste a los siguientes datos, aunque sea de forma aproximada"
+    comun:
+      n: "No"
+      s: "Sí"
+      todas: "En todas"
+      alguna: "En alguna"
+      ninguna: "En ninguna"
     ciudad:
       titulo: "Mi ciudad"
       localidad: "Provincia y municipio más próximo a su vivienda:"
     edificio:
+      antes1950: "Antes de 1950"
+      de1951a1960: "Entre 1951 y 1960"
+      de1961a1970: "Entre 1961 y 1970"
+      de1971a1980: "Entre 1971 y 1980"
+      de1981a1990: "Entre 1981 y 1990"
+      de1991a2000: "Entre 1991 y 2000"
+      post2000: "Posterior al 2000"
       titulo: "Mi edificio"
       periodo: "Señale el periodo aproximado de construcción de su edificio:"
       tipo: "¿En qué tipo de edificio está ubicada a vivienda?"
       plantas: "Indique el número de plantas que tiene el edificio sobre rasante (incluyendo la baja):"
+      tejado: "Indique la estructura del tejado:"
+      tejado_plano: "Plana"
+      tejado_inclinado: "Inclinada"
     vivienda:
+      bloque: "Vivienda en un bloque"
+      aislado: "Vivienda unifamiliar aislada"
+      adosado: "Vivienda unifamiliar adosada"
+      pareado: "Vivienda unifamiliar pareada"
+      planta_baja: "En la planta baja"
+      planta_intermedia: "En una planta intermedia"
+      planta_ultima: "En la última planta"
+      menos5: "Hace menos de 5 años"
+      entre5y10: "Entre 5 y 10 años"
+      mas10: "Más de 10 años"
+      reforma_aistejado: "Mejora del aislamiento del tejado"
+      reforma_aisparedes: "Mejora del aislamiento de las paredes"
+      reforma_toldos: "Instalación de toldos o elementos de sombra"
+      reforma_doblevidrio: "Instalación de doble vidrio u otros tratamientos de ventanas"
+      reforma_asisuelo: "Mejora del aislamiento del suelo"
       titulo: "Mi vivienda"
       planta: "Si su vivienda pertenece un bloque, ¿en qué planta está situada?"
       estancias: "Número de estancias, incluyendo la cocina:"
       aseos: "Número de cuartos de baño/aseos:"
-      tejado: "Indique la estructura del tejado:"
       superficie: "Superficie aproximada útil:"
       reformas: "¿se ha realizado alguna reforma de las siguientes?"
       cuando_reformas: "en caso afirmativo... ¿hace cuánto se produjo la última?"
+    equipamiento:
+       calef: "Calefacción"
+       aire: "Aire acondicionado"
+       agua: "Agua caliente"
+       electr: "Electricidad"
+       gasnat: "Gas natural"
+       gasoleo: "Gasóleo"
+       gasbutprop: "Gas butano o propano"
+       solar: "Solar"
+       madera: "Madera"
+       otros: "Otros"
+       termo: "Termo eléctrico"
+       caldera: "Caldera"
+       bomba: "Bomba de calor"
+       individual: "Individual"
+       centralizada: "Centralizada"
+       salas: "Salón/salas de estar"
+       dormitorios: "Dormitorios"
+       radiador: "Radiadores eléctricos"
+       acumulad: "Acumuladores nocturos"
+       uneq: "Un equipo con varias salidas de aire"
+       varioseq: "Varios equipos"
     equipo:
       titulo: "Mi equipamiento"
       fuentes: "Señale las fuentes de energía utilizadas para su vivienda <br/>(puede señalar varias fuentes de energía para una misma instalación):"
@@ -52,6 +104,21 @@ es:
         titulo: "Electrodomésticos"
         electrodomesticos: "¿Cuántos de estos dispositivos tiene en su vivienda?"
         iluminacion: "¿Qué cantidad aproximada tiene de los siguientes sistemas de iluminación?"
+        lavadora: "Lavadora"
+        lavavajillas: "Lavavajillas"
+        frigo: "Frigorífico"
+        hornoel: "Horno eléctrico"
+        hornonoel: "Horno no eléctrico"
+        microondas: "Microondas"
+        tele: "Televisión"
+        ordenador: "Ordenador de sobremesa"
+        portatil: "Ordenador portátil"
+        secadora: "Secadora"
+        congelador: "Congelador independiente"
+        incan: "Incandescentes (bombilla tradicional y halógenos)"
+        bajocon: "Lámparas de bajo consumo"
+        fluor: "Fluorescentes"
+        leds: "LEDs"
     costumbres:
       titulo: "Mis costumbres"
       personas: "Número de personas que habitan la vivienda:"
