--- a/config/locales/es.app.yml
+++ b/config/locales/es.app.yml
@@ -1,34 +1,76 @@
+
 es:
-  activerecord:
-    models:
-      user: "usuario"
-    attributes:
-      user:
-        username: "Ese nombre de usuario"
-        password: "Contraseña"
-        password_confirmation: "Repite contraseña"
-        question: "La pregunta"
-        answer: "La espuesta"
-  profile: "Paso 1: Encuesta"
-  report: "Paso 3: Consumo"
-  invoices: "Paso 2: Facturas"
-
-  login: "Identificarse"
-  email: "Email"
+  disable_with: "Un momento por favor..."
+  username: "Nombre"
   password: "Contraseña"
-  sign_in: "Entrar"
-  sign_up: "Registrarme"
-  forgot_password: "Olvidé la contraseña"
-  remember_me: "Recordarme en este equipo"
+  email: "Email"
+  
+  flash:
+    require_user: "Necesitas estar dado de alta como usuario para acceder a esta zona"
+    require_admin: "Necesitas ser un administrador para acceder a esta zona"
+    
+  layouts:
+    e3e:
+      survey: "Paso 1: Encuesta"
+      invoices: "Paso 2: Facturas"
+      report: "Paso 3: Consumo"
+      user_session_close: "Salir"
+    admin:
+      users: "Usuarios"
+      statistics: "Estadísticas"
+      development: "Desarrollo"
+      session_close: "Salir de la zona de administración"
 
-  session:
-    close: "Salir"
+  about:
+    development:
+      title: "Desarrollo"
+    
+  surveys:
+    edit:
+      title: "Datos sobre el consumo energético de su vivienda"
+      subtitle: "Le rogamos nos conteste a los siguientes datos, aunque sea de forma aproximada"
+    update:
+      flash: "Encuesta guardada con éxito. Gracias"
+      
+  users:
+    password_confirmation: "Confirma contraseña"
+    question: "Pregunta"
+    answer: "Respuesta"
+    create: "Dar de alta"
+    index:
+      title: "Listado de usuarios registrados"
+    new:
+      title: "Darse de alta como nuevo usuario"
 
-         
+  invoices:
+    show:
+      title: "Facturas de su vivienda"
+      gas: "Consumo de gas"
+      elec: "Consumo eléctrico"
+      edit_gas: "Editar factura de gas"
+      edit_elec: "Editar factura de electricidad"
+    edit:
+      title_gas: "Editar consumo de gas"
+      submit: "Guardar"
 
+  user_sessions:
+    username: "Nombre"
+    password: "Contraseña"
+    new:
+      title: "Entrar en la zona de usuarios"
+      submit: "Entrar"
+      sign_up: "Darse de alta"
+    create:
+      notice: "Bienvenido a E3E"
+    destroy:
+      notice: "Cerrada la sessión"
 
-
-       
-
-       
-     
+  admin_sessions:
+    new:
+      title: "Entrar a la zona de administración"
+      submit: "Entrar"
+    create:
+      flash: "Eres administrador en E3E. Bienvenido"
+    destroy:
+      flash: "Cerrada la sessión como administrador"
+  
