--- a/config/locales/es.encuesta.yml
+++ b/config/locales/es.encuesta.yml
@@ -47,6 +47,8 @@ es:
       planta: "Si su vivienda pertenece un bloque, ¿en qué planta está situada?"
       estancias: "Número de estancias, incluyendo la cocina:"
       aseos: "Número de cuartos de baño/aseos:"
+      fachada: "Área aproximada de la fachada exterior incluyendo las que dan a patios:"
+      acristalado: "Porcentaje aproximado de la fachada que va acristalada:"
       superficie: "Superficie aproximada útil:"
       reformas: "¿se ha realizado alguna reforma de las siguientes?"
       cuando_reformas: "en caso afirmativo... ¿hace cuánto se produjo la última?"
@@ -72,22 +74,27 @@ es:
        acumulad: "Acumuladores nocturos"
        uneq: "Un equipo con varias salidas de aire"
        varioseq: "Varios equipos"
+       ventana: "De ventana" 
+       split: "Split (aparatos independientes)"
+       unovarios: "Uno fuera, varios dentro"
+       variosvarios: "Varios fuera, varios dentro"
+       notengo: "No tengo"
     equipo:
       titulo: "Mi equipamiento"
       fuentes: "Señale las fuentes de energía utilizadas para su vivienda <br/>(puede señalar varias fuentes de energía para una misma instalación):"
       agua:
         titulo: "Agua caliente"
-        tiene: "¿Tiene agua caliente?"
-        tipo: "¿Qué dispositivo calienta el agua?"
+        tipo: "Tipo de instalación de agua caliente:"
+        dispositivo: "¿Qué dispositivo calienta el agua?"
         solar: "¿Dispone de paneles solares para calentar agua?"
         edad: "En caso de que tenga paneles solares, indique en años la edad aproximada de la instalación:"
         caldera_tipo: "En caso de que tenga caldera... ¿es individual o centralizada?"
         caldera_deposito: "En caso de que tenga caldera... ¿tiene depósito de acumulación?"
       calefaccion:
         titulo: "Calefacción"
-        tiene: "¿Tiene calefacción?"
         estancias: "¿En qué estancias tiene calefacción?"
         tipo: "¿Qué tipo de calefacción tiene?"
+        dispositivo: "¿Qué tipo de dispositivo calienta el agua?"
         edad: "Edad aproximada de la instalación"
         caldera_misma: "Si caldera tanto para agua como para calefacción... <br/>¿utiliza la misma caldera para la calefacción y el agua caliente?"
         caldera_tipo: "Si no es la misma, ¿qué tipo de caldera tiene la calefacción?"
