--- a/config/locales/es.encuesta.yml
+++ b/config/locales/es.encuesta.yml
@@ -13,13 +13,12 @@ es:
       titulo: "Mi ciudad"
       localidad: "Provincia y municipio más próximo a su vivienda:"
     edificio:
-      antes1950: "Antes de 1950"
-      de1951a1960: "Entre 1951 y 1960"
-      de1961a1970: "Entre 1961 y 1970"
-      de1971a1980: "Entre 1971 y 1980"
-      de1981a1990: "Entre 1981 y 1990"
-      de1991a2000: "Entre 1991 y 2000"
-      post2000: "Posterior al 2000"
+      antes1950: "Anterior a 1900"
+      de1901a1940: "Entre 1901 y 1940"
+      de1941a1960: "Entre 1941 y 1960"
+      de1961a1980: "Entre 1961 y 1980"
+      de1981a2006: "Entre 1981 y 2006"
+      post2006: "Posterior al 2006"
       titulo: "Mi edificio"
       periodo: "Señale el periodo aproximado de construcción de su edificio:"
       tipo: "¿En qué tipo de edificio está ubicada a vivienda?"
@@ -78,12 +77,12 @@ es:
        split: "Split (aparatos independientes)"
        unovarios: "Uno fuera, varios dentro"
        variosvarios: "Varios fuera, varios dentro"
-       notengo: "No tengo"
+       notengo: "No tengo / No uso"
     equipo:
       titulo: "Mi equipamiento"
       fuentes: "Señale las fuentes de energía utilizadas para su vivienda <br/>(puede señalar varias fuentes de energía para una misma instalación):"
       agua:
-        titulo: "Agua caliente"
+        titulo: "Agua caliente sanitaria"
         tipo: "Tipo de instalación de agua caliente:"
         dispositivo: "¿Qué dispositivo calienta el agua?"
         solar: "¿Dispone de paneles solares para calentar agua?"
