--- a/config/locales/es.app.yml
+++ b/config/locales/es.app.yml
@@ -34,7 +34,7 @@ es:
     development:
       title: "Desarrollo"
     
-  surveys:
+  user_surveys:
     edit:
       title: "Datos sobre el consumo energético de su vivienda"
       subtitle: "Le rogamos nos conteste a los siguientes datos, aunque sea de forma aproximada"
