Revert "everything broken"
This reverts commit 3fc3048eb49d9ef2f4a910276e5f2af9160810fd.

Signed-off-by: dani <danigb@gmail.com>

--- a/config/locales/es.app.yml
+++ b/config/locales/es.app.yml
@@ -34,7 +34,7 @@ es:
     development:
       title: "Desarrollo"
     
-  user_surveys:
+  surveys:
     edit:
       title: "Datos sobre el consumo energético de su vivienda"
       subtitle: "Le rogamos nos conteste a los siguientes datos, aunque sea de forma aproximada"
