--- a/README
+++ b/README
@@ -12,3 +12,4 @@ TAREAS
 - revisar texto de las url: /, /entrar, /cuestionario
 - username debería ser único
 - IE: revisar posición de los radio buttons
+- traducir authlogic
