--- a/config/locales/es.app.yml
+++ b/config/locales/es.app.yml
@@ -22,7 +22,7 @@ es:
       who: "Quiénes somos"
       mission: "Para qué sirve wecex"
       admin_zone: "Bienvenido a la zona de administración"
-      feedback: "Comentarios"
+      feedback: "Póngase en contacto con nosotros."
     admin:
       users: "Usuarios"
       statistics: "Estadísticas"
